<?xml version="1.0"?>
<package format="2">

  <name>syropod_rqt_reconfigure_control</name>
  <version>0.0.0</version>
  <description>The syropod_rqt_reconfigure_control package</description>

  <maintainer email="fletcher.talbot@csiro.au">tal058</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>syropod_highlevel_controller</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>syropod_highlevel_controller</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>syropod_highlevel_controller</exec_depend>

</package>
