<?xml version="1.0"?>
<package format="3">

  <name>syropod_rqt_reconfigure_control</name>
  <version>0.1.0</version>
  <description>The syropod_rqt_reconfigure_control package</description>

  <maintainer email="shc-support@csiro.au"></maintainer>

  <license>CSIRO Open Source Software Licence Agreement (Ref: LICENSE file)</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>syropod_highlevel_controller</depend>

</package>
